--- a/asd/WebContent/register.html
+++ b/asd/WebContent/register.html
@@ -46,12 +46,12 @@ function Checkjobseeker() {
 
 	<div id="jYes" style="visibility:hidden">
  		Location: <input id="loc" type= "text" value="" name="Location"><br>
-		Phone:    <input id="ph" type= "text" value="" name="Phone"><br></div>
+		Phone:    <input id="ph" type= "text" value="" name="Phone"><br>
 		<table border=1>
 		<tr>
 		<td>Choose File : </td>
 		<td><input type="file" name="file_uploaded" /></td>
-        </tr>
+        </tr></div>
         </table>
 	<input type="reset" value="clear" name="clear">
 	<input type="submit" value="submit" name="submit">
