--- a/asd/WebContent/register.html
+++ b/asd/WebContent/register.html
@@ -52,8 +52,8 @@ function Checkjobseeker() {
 		<td>Choose File : </td>
 		<td><input type="file" name="file_uploaded" /></td>
 
-        </tr></div>
-        </table>
+        </tr>  
+        </table></div>
 
 	<input type="reset" value="clear" name="clear">
 	<input type="submit" value="submit" name="submit">
