--- a/asd/WebContent/login.html
+++ b/asd/WebContent/login.html
@@ -3,10 +3,12 @@
 <head>
 <meta charset="ISO-8859-1">
 <title>Insert title here</title>
+<link rel="stylesheet" type="text/css" href="css/style.css"/>
 </head>
 <body>
+<h1>Login page</h1><br><br>
 <form name="logapp" action="login.jsp" method="POST">
-Email: <input type="text"  name="email" placeholder="Your email"><br><br>
+Email: <input type="email"  name="email" placeholder="Your email"><br><br>
 Password:<input type="password"  name= "password" placeholder = " Enter Password"><br><br>
 <input type="submit" value="submit" name="submit">
 </form>
